update the project on my main pc

--- a/app/src/main/res/layout/layout_chats_list.xml
+++ b/app/src/main/res/layout/layout_chats_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/chatsConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,47 +16,53 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginHorizontal="7dp"
-            android:layout_marginTop="7dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/chatsClose"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/x_icon" />
-
-            <ImageView
-                android:id="@+id/chatsAdd"
-                android:layout_gravity="end"
-                android:layout_marginStart="190dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/plus_icon"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chats"
-            android:textColor="@color/textViewColor"
-            android:textSize="9pt"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="15dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatsRecyclerView"
+            android:id="@+id/chatsInnerLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="7dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/chatsClose"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/x_icon" />
+
+                <ImageView
+                    android:id="@+id/chatsAdd"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="190dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/plus_icon"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chats"
+                android:textColor="@color/textViewColor"
+                android:textSize="9pt"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chatsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
