--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -9,9 +9,18 @@
         android:id="@+id/customSpinnerFrame"
         android:layout_width="150dp"
         android:layout_height="40dp"
+        android:paddingStart="20dp"
         android:background="@drawable/custom_spinner_shape"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/customSpinnerOptionText"
+            android:layout_gravity="center_vertical"
+            android:text="Option 1"
+            android:textColor="@color/textViewColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <ImageView
             android:id="@+id/customSpinnerIcon"
