--- a/app/src/main/res/layout/layout_input_popup.xml
+++ b/app/src/main/res/layout/layout_input_popup.xml
@@ -16,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <TextView
+            android:id="@+id/inputPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -24,6 +25,7 @@
             android:textSize="20sp"
             android:text="Greetings!" />
         <TextView
+            android:id="@+id/inputPopupText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
