--- a/app/src/main/res/layout/setting_chat.xml
+++ b/app/src/main/res/layout/setting_chat.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/setting_startup_shape"
+    android:maxWidth="@dimen/settings_fragment_size"
+    android:maxHeight="@dimen/settings_fragment_size"
     android:layout_width="@dimen/settings_fragment_size"
     android:layout_height="@dimen/settings_fragment_size">
 
@@ -32,9 +34,9 @@
             android:layout_marginTop="25dp">
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:text="Default Chat"
                 android:textColor="@color/textViewColor"
                 android:textSize="15sp"
