--- a/app/src/main/res/layout/setting_startup.xml
+++ b/app/src/main/res/layout/setting_startup.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/setting_startup_shape"
+    android:maxWidth="@dimen/settings_fragment_size"
+    android:maxHeight="@dimen/settings_fragment_size"
     android:layout_width="@dimen/settings_fragment_size"
     android:layout_height="@dimen/settings_fragment_size">
 
