--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="center_vertical"
             android:text="Option 1"
             android:textColor="@color/textViewColor"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
