--- a/app/src/main/res/drawable/chats_list_shape.xml
+++ b/app/src/main/res/drawable/chats_list_shape.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp" />
+    <item>
+        <shape>
+            <corners
+                android:radius="15dp" />
 
-    <solid
-        android:color="@color/chatsListShapeColor" />
-</shape>
+            <gradient
+                android:angle="45"
+                android:startColor="@color/gradientStartColor"
+                android:endColor="@color/gradientEndColor"/>
+        </shape>
+    </item>
+
+    <item>
+        <shape>
+            <corners
+                android:radius="15dp" />
+
+            <solid
+                android:color="#81000000"/>
+        </shape>
+    </item>
+</layer-list>
