--- a/app/src/main/res/drawable/custom_spinner_dropdown_shape.xml
+++ b/app/src/main/res/drawable/custom_spinner_dropdown_shape.xml
@@ -3,9 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
+        android:radius="20dp"/>
 
     <solid
-        android:color="@color/backgroundColor2" />
+        android:color="@color/spinnerColor" />
 </shape>
