--- a/app/src/main/res/drawable/custom_spinner_object_shape.xml
+++ b/app/src/main/res/drawable/custom_spinner_object_shape.xml
@@ -2,14 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Smaller Shape -->
     <item>
-        <shape android:shape="rectangle">
-            <solid
-                android:color="@color/backgroundColor" />
-
+        <shape>
             <corners
-                android:radius="15dp" />
+                android:radius="10dp" />
+
+            <solid
+                android:color="#00000000"/>
         </shape>
     </item>
 </layer-list>
