--- a/app/src/main/res/drawable/popup_error_shape.xml
+++ b/app/src/main/res/drawable/popup_error_shape.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:radius="12dp" />
+    <item>
+        <shape>
+            <corners
+                android:radius="8dp" />
 
-    <solid
-        android:color="@color/popupErrorShapeColor" />
-</shape>
+            <gradient
+                android:angle="45"
+                android:startColor="@color/gradientStartColor"
+                android:endColor="@color/gradientEndColor"/>
+        </shape>
+    </item>
+
+    <item>
+        <shape>
+            <corners
+                android:radius="8dp" />
+
+            <solid
+                android:color="#A4000000"/>
+        </shape>
+    </item>
+</layer-list>
