--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,23 +10,28 @@
     <LinearLayout
         android:id="@+id/chatLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:paddingBottom="50dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/chatBottomLinearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatRecycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:foreground="@drawable/recycler_fade_out" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/chatBottomLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
+        android:layout_margin="5dp"
         android:orientation="horizontal"
+        android:background="@drawable/edittext_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -34,9 +39,9 @@
         <EditText
             android:id="@+id/chatEditText"
             android:layout_width="0dp"
-            android:layout_height="@dimen/chat_edittext_height"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/edittext_shape"
+            android:background="#00000000"
             android:ems="10"
             android:hint="@string/chatEdittext"
             android:importantForAutofill="no"
@@ -50,15 +55,13 @@
             android:layout_gravity="center"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-
         <ImageView
             android:id="@+id/chatSendButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_marginHorizontal="10dp"
             android:layout_gravity="center_vertical|end"
             android:padding="8dp"
-            android:background="@drawable/chat_buttons_shape"
             android:src="@drawable/send_icon" />
     </LinearLayout>
 
