--- a/app/src/main/res/layout/layout_server_info.xml
+++ b/app/src/main/res/layout/layout_server_info.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/settings_server_shape"
+        android:background="@drawable/login_shape"
         android:orientation="vertical"
         android:padding="30dp"
         android:gravity="center"
