--- a/app/src/main/res/layout/setting_startup.xml
+++ b/app/src/main/res/layout/setting_startup.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/setting_startup_shape"
+    android:background="@drawable/setting_shape"
     android:maxWidth="@dimen/settings_fragment_size"
     android:maxHeight="@dimen/settings_fragment_size"
     android:layout_width="@dimen/settings_fragment_size"
