--- a/app/src/main/res/layout/layout_message.xml
+++ b/app/src/main/res/layout/layout_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginHorizontal="5dp"
-    android:layout_marginVertical="2dp">
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
