--- a/app/src/main/res/layout/setting_chat.xml
+++ b/app/src/main/res/layout/setting_chat.xml
@@ -43,7 +43,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.fragment.app.FragmentContainerView
+            <FrameLayout
                 android:id="@+id/settingChatContainer"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
