--- a/app/src/main/res/layout/setting_startup.xml
+++ b/app/src/main/res/layout/setting_startup.xml
@@ -33,11 +33,10 @@
             android:orientation="horizontal"
             android:layout_marginTop="25dp">
 
-            <androidx.fragment.app.FragmentContainerView
+            <FrameLayout
                 android:id="@+id/settingStartupToggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:layout="@layout/custom_toggle"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -57,11 +56,10 @@
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
-            <androidx.fragment.app.FragmentContainerView
+            <FrameLayout
                 android:id="@+id/settingStartupToggle2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:layout="@layout/custom_toggle"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
