Its been a while
Now it can detect when the message was sent
Changed the Date type from the PacketObject. Now it works with long

--- a/app/src/main/res/layout/layout_input_popup.xml
+++ b/app/src/main/res/layout/layout_input_popup.xml
@@ -10,6 +10,7 @@
         android:background="@drawable/input_popup_shape"
         android:orientation="vertical"
         android:gravity="center"
+        android:clickable="true"
         android:padding="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
