--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,22 @@
                 android:src="@drawable/settings_icon"
                 tools:ignore="TouchTargetSizeCheck" />
         </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/activityButtonAnime"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="@dimen/tab_icon_size"
+                android:layout_height="@dimen/tab_icon_size"
+                android:layout_marginHorizontal="50dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/anime_icon"
+                tools:ignore="TouchTargetSizeCheck" />
+        </FrameLayout>
     </LinearLayout>
 
     <View
