--- a/app/src/main/res/layout/layout_message.xml
+++ b/app/src/main/res/layout/layout_message.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/messageLayout"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="5dp">
 
@@ -14,7 +15,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/usernameTextView"
+            android:id="@+id/messageUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="7dp"
@@ -24,7 +25,7 @@
             android:text="" />
 
         <TextView
-            android:id="@+id/dateTextView"
+            android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
@@ -40,6 +41,7 @@
         android:orientation="horizontal">
 
         <View
+            android:id="@+id/messageSlider"
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@drawable/fragment_selector_shape"
@@ -54,7 +56,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/contentTextView"
+                android:id="@+id/messageContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
