added the folder fragment where you can take a look at the system files
fixed some bugs as well

--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -13,6 +13,8 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_marginBottom="5dp"
+        android:paddingBottom="8dp"
+        android:foreground="@drawable/recycler_fade_out"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/chatBottomLinearLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +24,7 @@
             android:id="@+id/chatRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:foreground="@drawable/recycler_fade_out" />
+             />
     </LinearLayout>
 
     <LinearLayout
