--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,94 +12,117 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/secondaryColor"
-        app:layout_constraintBottom_toTopOf="@+id/activityLinearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/activityScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/activityLinearLayout"
-        android:layout_width="0dp"
+    <ScrollView
+        android:id="@+id/activityScrollView"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/activityBottomBarColor"
-        android:gravity="center_horizontal|center_vertical"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:baselineAligned="false">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <FrameLayout
-            android:id="@+id/activityButtonChat"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/activityLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/activityBottomBarColor"
+            android:baselineAligned="false"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="@dimen/tab_icon_size"
-                android:layout_height="@dimen/tab_icon_size"
-                android:layout_marginHorizontal="50dp"
-                android:contentDescription="@string/todo"
-                android:src="@drawable/chat_icon"
-                tools:ignore="TouchTargetSizeCheck" />
-        </FrameLayout>
+            <FrameLayout
+                android:id="@+id/activityButtonChat"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="@dimen/tab_icon_size"
+                    android:layout_height="@dimen/tab_icon_size"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/chat_icon"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </FrameLayout>
 
 
-        <FrameLayout
-            android:id="@+id/activityButtonLogin"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
+            <FrameLayout
+                android:id="@+id/activityButtonLogin"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="@dimen/tab_icon_size"
-                android:layout_height="@dimen/tab_icon_size"
-                android:layout_marginHorizontal="50dp"
-                android:contentDescription="@string/todo"
-                android:src="@drawable/login_icon"
-                tools:ignore="TouchTargetSizeCheck" />
-        </FrameLayout>
+                <ImageView
+                    android:layout_width="@dimen/tab_icon_size"
+                    android:layout_height="@dimen/tab_icon_size"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/login_icon"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/activityButtonSettings"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
+            <FrameLayout
+                android:id="@+id/activityButtonSettings"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="@dimen/tab_icon_size"
-                android:layout_height="@dimen/tab_icon_size"
-                android:layout_marginHorizontal="50dp"
-                android:contentDescription="@string/todo"
-                android:src="@drawable/settings_icon"
-                tools:ignore="TouchTargetSizeCheck" />
-        </FrameLayout>
+                <ImageView
+                    android:layout_width="@dimen/tab_icon_size"
+                    android:layout_height="@dimen/tab_icon_size"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/settings_icon"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/activityButtonAnime"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
+            <FrameLayout
+                android:id="@+id/activityButtonAnime"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="@dimen/tab_icon_size"
-                android:layout_height="@dimen/tab_icon_size"
-                android:layout_marginHorizontal="50dp"
-                android:contentDescription="@string/todo"
-                android:src="@drawable/anime_icon"
-                tools:ignore="TouchTargetSizeCheck" />
-        </FrameLayout>
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="@dimen/tab_icon_size"
+                    android:layout_height="@dimen/tab_icon_size"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/anime_icon"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/activityButtonFolder"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="@dimen/tab_icon_size"
+                    android:layout_height="@dimen/tab_icon_size"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/folder_icon2"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </FrameLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_weight="1"
         android:background="@color/primaryColor"
-        app:layout_constraintBottom_toTopOf="@+id/activityLinearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/activityScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
