--- a/app/src/main/res/layout/layout_file.xml
+++ b/app/src/main/res/layout/layout_file.xml
@@ -68,6 +68,7 @@
                 android:text="filename.zip" />
 
             <FrameLayout
+                android:id="@+id/messageFileDownload"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
                 <ImageView
